<resources>
    <string name="app_name">My App Portfollio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Nanodgree Apps!</string>
    <string name="spotify_streamer">spotify streamer</string>
    <string name="score_app">score app</string>
    <string name="library_app">library app</string>
    <string name="build_it_bigger">build it bigger</string>
    <string name="xzy_reader">xyz reader</string>
    <string name="my_own_app">my own app</string>
</resources>
